--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <h1>Hello Extensions</h1>
-        <script src="/dist/background.js"></script>
+        <script src="/dist/popup.js"></script>
     </body>
 </html>
