basic idea done

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
-<html>
+<html style="width: 500px; height: 500px">
     <body>
         <h1>Hello Extensions</h1>
+        <span id="main"></span>
         <script src="/dist/popup.js"></script>
     </body>
 </html>
