add searching via reverse index

--- a/src/home.html
+++ b/src/home.html
@@ -3,7 +3,7 @@
         <input
             class="bg-black5 text-black text-md rounded-lg w-full px-4 py-2"
             type="text"
-            id="search"
+            id="searchInput"
             placeholder="Search"
         />
     </div>
