add edit functionality

--- a/src/home.html
+++ b/src/home.html
@@ -4,7 +4,7 @@
             class="bg-black5 text-black text-md rounded-lg w-full px-4 py-2"
             type="text"
             id="searchInput"
-            placeholder="Search"
+            placeholder="Search via keywords (e.g. 'action' or 'romance')"
         />
     </div>
 
@@ -51,8 +51,11 @@
                         </div>
                     </div>
                     <div class="flex">
-                        <button id="editButton" class="text-blue-600">
-                            Edit
+                        <button
+                            id="saveButton"
+                            class="text-blue-600 transition duration-200 ease-in-out"
+                        >
+                            Save
                         </button>
                         <div class="mr-2"></div>
                         <div>•</div>
