--- a/src/popup.html
+++ b/src/popup.html
@@ -22,7 +22,7 @@
 
             <!-- navbar/footer -->
             <nav
-                class="flex items-center justify-between bg-primary text-white text-bold px-6 py-4"
+                class="flex items-center justify-center bg-primary text-white text-bold px-6 py-4"
             >
                 <button id="homeButton" class="flex flex-col items-center">
                     <svg
@@ -41,6 +41,7 @@
                     </svg>
                     <h1>Home</h1>
                 </button>
+                <div class="mr-16"></div>
                 <button id="addButton" class="flex flex-col items-center">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -58,6 +59,7 @@
                     </svg>
                     <h1>Add</h1>
                 </button>
+                <div class="mr-16"></div>
                 <button id="settingsButton" class="flex flex-col items-center">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
