--- a/src/popup.html
+++ b/src/popup.html
@@ -13,8 +13,14 @@
             <div
                 class="flex items-center justify-between bg-primary text-white px-6 py-4"
             >
-                <h1 class="text-2xl font-bold">WTWN</h1>
-                <p id="username" class="text-xl"></p>
+                <div>
+                    <h1 class="text-2xl font-bold">WTWN</h1>
+                    <!-- <p class="text-xs">What to watch next</p> -->
+                </div>
+                <div class="flex flex-col items-end">
+                    <p id="username" class="text-xl"></p>
+                    <p id="listLength" class="text-xs"></p>
+                </div>
             </div>
 
             <!-- content will be injected by DOMContentLoaded -->
