--- a/src/settings.html
+++ b/src/settings.html
@@ -1,1 +1,17 @@
-<div>settings</div>
+<div class="flex flex-col justify-center pt-2 px-6">
+    <p class="font-bold text-lg">Current User:</p>
+    <div class="mb-2"></div>
+    <input
+        class="bg-black5 text-black text-md rounded-lg w-full px-4 py-2"
+        type="text"
+        id="usernameInput"
+        placeholder="Ur username"
+    />
+    <div class="mb-4"></div>
+    <button
+        id="saveButton"
+        class="bg-primary text-white rounded-md transition duration-200 ease-in-out px-2 py-1"
+    >
+        Save
+    </button>
+</div>
